[package]
name = "tracing-assertions"
version = "0.1.4"
edition = "2021"
description = "An assertions framework for Tokio tracing."
license = "Apache-2.0"

repository = "https://github.com/JonathanWoollett-Light/tracing-assertions"
documentation = "https://docs.rs/tracing-assertions/"
readme = "./README.md"

[dependencies]
ansi_term = "0.12.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.5"
