[package]
name = "tracing-assertions"
version = "0.6.0"
edition = "2021"
description = "An assertions framework for Tokio tracing."
license = "Apache-2.0"

repository = "https://github.com/JonathanWoollett-Light/tracing-assertions"
documentation = "https://docs.rs/tracing-assertions/"
readme = "./README.md"

[features]
default = ["regex"]

[dependencies]
ansi_term = "0.12.1"
regex = { version = "1.11.1", optional = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.5"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
enum_glob_use = "allow" # Matching is prettier doing this.
